<resources>
    <string name="app_name">GastroTrack</string>
    <string name="title_activity_login">GastroTrack</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_insert_symptom">InsertSymptom</string>
    <string name="add_event">Add event</string>
    <string name="open_calendar">Open Calendar</string>
    <string name="events_of_day">Events of %s</string>
    <string name="api_call_successful">"Api call successful "</string>
    <string name="api_call_unsuccessful">"Api call unsuccessful "</string>
    <string name="change_date">Change date and time</string>
    <string name="select_symptom">Select symptom</string>
    <string name="select_allergen">Select allergen</string>
    <string name="select_feces">Select the type of feces</string>
    <string name="select_supplement">Select supplement</string>
    <string name="send_symptom">Send symptom</string>
    <string name="send_meal">Send meal</string>
    <string name="send_feces">Send feces</string>
    <string name="send_supplement">Send supplement</string>
    <string name="avatar">avatar</string>
    <string name="today">today</string>
    <string name="null_string">null</string>
    <string name="add_symptom_button">Add symptom</string>
    <string name="add_meal_button">Add Meal</string>
    <string name="add_supplement_button">Add Supplement</string>
    <string name="add_feces_button">Add Feces</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="delete_entry_confirmation">Do you really want to delete this entry?</string>
    <string name="warning_empty_meal">Please select at least one allergen</string>
    <string name="search">Search</string>
    <string name="confirm">Confirmation</string>
    <string name="log_off_question">Do you really want to log off?</string>
    <string name="password_incorrect">Username or Password incorrect</string>
    <string name="fragment_login_password_hint">Password</string> 
</resources>