<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventsInDay">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/event_day_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/null_string" />

        <ListView
            android:id="@+id/event_day_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/floatingActionsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:layout_gravity="end|bottom"
        app:fab_expandDirection="up"
        app:fab_labelsPosition="left"
        app:fab_labelStyle="@style/FloatStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingAddSymptom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFF"
            app:fab_icon="@drawable/ic_plus"
            app:fab_size="mini"
            app:fab_title="@string/add_symptom_button"
            />
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingAddMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFF"
            app:fab_icon="@drawable/ic_plus"
            app:fab_size="mini"
            app:fab_title="@string/add_meal_button"
            />
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingAddFeces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFF"
            app:fab_icon="@drawable/ic_plus"
            app:fab_size="mini"
            app:fab_title="@string/add_feces_button"
            />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</androidx.coordinatorlayout.widget.CoordinatorLayout>